# face-everthing

./: CMakeLists.txt  README.md
alignment/include/: GazeEstimation.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  SVR_patch_expert.h  openface_alignment.h  stdafx.h
alignment/src/: CCNF_patch_expert.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorUtils.cpp  PDM.cpp  openface_alignment.cpp
api/: cl_alignment.h  cl_common.h  cl_detector.h
cpp_modules/alignment/: cl_alignment.h
cpp_modules/alignment/include/: utils.h
cpp_modules/alignment/include/cln/: CCNF_patch_expert.h  Face_utils.h  LandmarkCoreIncludes.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PAW.h  PDM.h  Patch_experts.h  cln_alignment.h  stdafx.h
cpp_modules/alignment/include/es/: es_alignment.h
cpp_modules/alignment/include/lbf/: LBF.h  LBFRegressor.h  RandomForest.h  Tree.h  lbf_alignment.h
cpp_modules/alignment/src/: utils.cpp
cpp_modules/alignment/src/cln/: CCNF_patch_expert.cpp  Face_utils.cpp  GazeEstimation.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp  cln_alignment.cpp
cpp_modules/alignment/src/es/: Fern.cpp  FernCascade.cpp  ShapeRegressor.cpp
cpp_modules/alignment/src/lbf/: LBF.cpp  LBFRegressor.cpp  Tree.cpp
cpp_modules/camera/include/: camera_model.h  image_warping.h
cpp_modules/camera/src/: image_warping.cpp
cpp_modules/common/: cl_common.h
cpp_modules/detection/: cl_detector.h
cpp_modules/detection/include/mtcnn/: mtcnn.h
cpp_modules/detection/include/seeta/: seeta_detector.h
cpp_modules/detection/include/seeta/util/: nms.h
cpp_modules/detection/src/mtcnn/: mtcnn.cpp
cpp_modules/detection/src/seeta/: seeta_detector.cpp
cpp_modules/detection/src/seeta/util/: nms.cpp
cpp_modules/example/: alignment_benchmark.cpp  all_in_one.cpp  face_all_in_one.cpp  mtcnn_align_dataset.cpp  video_conference.cpp
cpp_modules/openpose/: CMakeLists.txt
cpp_modules/openpose/core/: CMakeLists.txt  headers.hpp  macros.hpp  maximumCaffe.cpp  maximumCaffe.hpp  netCaffe.cpp  netCaffe.hpp  resizeAndMergeCaffe.cpp  resizeAndMergeCaffe.hpp
cpp_modules/openpose/face/: CMakeLists.txt  faceExtractor.cpp  faceExtractor.hpp  faceParameters.hpp  op_face.hpp
cpp_modules/openpose/utilities/: CMakeLists.txt  flagsToOpenPose.cpp  flagsToOpenPose.hpp  profiler.hpp
cpp_modules/recognition/: cl_recognizer.h
cpp_modules/recognition/include/: net_caffe.h
cpp_modules/recognition/include/sphereface/: sphereface.h
cpp_modules/recognition/src/: net_caffe.cpp
cpp_modules/recognition/src/sphereface/: sphereface.cpp
cpp_modules/tracking/: CMakeLists.txt  tracker.cpp  tracker.hpp
detection/include/: seeta_detector.h
detection/include/util/: nms.h
detection/src/: seeta_detector.cpp
detection/src/util/: nms.cpp
example/: face_app_example.cpp
trained_models/detection/: det1.caffemodel  det2.caffemodel
